deployment/k8s/overlays/stable/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movie-stable
  labels:
    policy.sigstore.dev/include: "true"
