deployment/k8s/overlays/stable/movie-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: movies-rollout
spec:
  selector:
    matchLabels:
      app: movie-backend
  template:
    metadata:
      labels:
        app: movie-backend
        enforce-movie-stable: "true"
    spec:
      volumes:
        - name: shared-migration
          emptyDir: {}
        - name: shared-env
          emptyDir: {}
        - name: api-env
          secret:
            secretName: api-secret
        - name: aws-secret
          secret:
            secretName: garage-app-secret
      containers:
      - image: kerolosayman308/movie-reservation@sha256:1ac7926ad41eb468b92e2b0d8f2db3cb99e1c50c5d26e8c9ffdb092054e268a2
        name: movie-reservation
        volumeMounts:
          - mountPath: /prod/.env
            subPath: .env
            name: shared-env
        ports:
        - containerPort: 8000
        resources: 
          request:
            memory: 100Mi
            cpu: "0.2"
  strategy:
    canary: 
      canaryService: api-service-canary
      stableService: api-service-stable
      maxSurge: '25%'
      maxUnavailable: 0
      trafficRouting:
        nginx:
          stableIngress: movie-route
      steps:
        - setWeight: 10
        - pause:
            duration: 2m
        - setWeight: 20
        - pause: 
            duration: 2m 
        - setWeight: 50
        - pause: 
            duration: 2m 
        - setWeight: 100
