deployment/k8s/overlays/stable/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-canary
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: movie-backend
  type: ClusterIP
