deployment/k8s/overlays/stable/api-route-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-route
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-service-stable
            port:
              number: 80
        path: /api
        pathType: Prefix
